new admin added

--- a/admin/manage_faculty.html
+++ b/admin/manage_faculty.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Students</title>
+    <title>Manage Faculty</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="adminstyles.css">
 </head>
@@ -12,59 +11,95 @@
     <!-- Header Section -->
     <header>
         <div class="logo" title="Admin Portal CIT">
-            <img src="src/cit.jpg" alt="CIT Logo">
-            <h2>Student Management</h2>
+            <img src="cit.jpg" alt="CIT Logo">
+            <h2>Admin Bridge</h2>
         </div>
-        <div id="profile-btn">
-            <span class="material-icons-sharp">person</span>
-        </div>
-        <div class="theme-toggler">
-            <span class="material-icons-sharp active">light_mode</span>
-            <span class="material-icons-sharp">dark_mode</span>
+        <!-- Navigation Menu -->
+        <div class="navbar">
+            <a href="admin_dashboard.html">
+                <span class="material-icons-sharp">dashboard</span>
+                <h3>Dashboard</h3>
+            </a>
+            <a href="manage_students.html">
+                <span class="material-icons-sharp">person</span>
+                <h3>Manage Students</h3>
+            </a>
+            <a href="manage_faculty.html" class="active">
+                <span class="material-icons-sharp">school</span>
+                <h3>Manage Faculty</h3>
+            </a>
+            <a href="../index.html">
+                <span class="material-icons-sharp">logout</span>
+                <h3>Logout</h3>
+            </a>
         </div>
     </header>
 
-    <!-- Main Section -->
+    <!-- Main Container -->
     <div class="container">
+        <!-- Sidebar Section -->
+        <aside>
+            <div class="profile">
+                <div class="top">
+                    <div class="profile-photo">
+                        <img src="profile-admin.jpg" alt="Admin Profile">
+                    </div>
+                    <div class="info">
+                        <p>Hey, <b>Admin</b></p>
+                        <small class="text-muted">ID: 1001</small>
+                    </div>
+                </div>
+                <div class="about">
+                    <h5>Email</h5>
+                    <p>admin@organization.com</p>
+                    <h5>Contact</h5>
+                    <p>+1 123-456-7890</p>
+                    <h5>Address</h5>
+                    <p>123 Admin Street, City</p>
+                </div>
+            </div>
+        </aside>
+
+        <!-- Main Section -->
         <main>
-            <h1>Manage Students</h1>
-            <p>Perform actions to add, update, or delete student records.</p>
+            <div class="manage-faculty-section">
+                <h2>Manage Faculty</h2>
+                <!-- Form Container -->
+                <form id="faculty-form" class="faculty-form">
+                    <label for="faculty-name">Name:</label>
+                    <input type="text" id="faculty-name" placeholder="Enter Faculty Name" required>
 
-            <div class="action-cards">
-                <!-- Add Student Card -->
-                <div class="card">
-                    <span class="material-icons-sharp">person_add</span>
-                    <h3>Add Student</h3>
-                    <p>Create a new student profile in the system.</p>
-                    <button onclick="window.location.href='add_student.html'">Add Student</button>
-                </div>
+                    <label for="faculty-department">Department:</label>
+                    <input type="text" id="faculty-department" placeholder="Enter Department" required>
 
-                <!-- Update Student Card -->
-                <div class="card">
-                    <span class="material-icons-sharp">edit</span>
-                    <h3>Update Student</h3>
-                    <p>Modify existing student details.</p>
-                    <button onclick="window.location.href='update_student.html'">Update Student</button>
-                </div>
+                    <label for="faculty-email">Email:</label>
+                    <input type="email" id="faculty-email" placeholder="Enter Faculty Email" required>
 
-                <!-- Delete Student Card -->
-                <div class="card">
-                    <span class="material-icons-sharp">delete</span>
-                    <h3>Delete Student</h3>
-                    <p>Remove a student profile from the system.</p>
-                    <button onclick="window.location.href='delete_student.html'">Delete Student</button>
+                    <button type="submit">Add Faculty</button>
+                </form>
+
+                <!-- Table Container -->
+                <div class="table-container">
+                    <table id="faculty-table">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Department</th>
+                                <th>Email</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="faculty-list">
+                            <!-- Faculty rows will be dynamically populated here -->
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </main>
     </div>
 
-    <!-- Scripts -->
-    <script>
-        // Dark Mode Toggler
-        const themeToggler = document.querySelector('.theme-toggler');
-        themeToggler.addEventListener('click', () => {
-            document.body.classList.toggle('dark-theme');
-        });
-    </script>
+    <!-- Script -->
+    <script src="manage_faculty.js"></script>
 </body>
 </html>
