--- a/faculty/faculty_marksattendance.html
+++ b/faculty/faculty_marksattendance.html
@@ -7,6 +7,8 @@
     <title>Add/Update Attendance</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="shortcut icon" href="src/cit.png" type="image/png">
+    <link rel="stylesheet" href="facultystyles.css">  
+
     <style>
         /* Attendance Section Styles */
         .marks-container {
