--- a/faculty/faculty_view_student_details.html
+++ b/faculty/faculty_view_student_details.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Student Details</title>
     <link rel="shortcut icon" href="src/cit.png" type="image/png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="facultystyles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
