Update on student portal

--- a/admin/admin_dashboard.html
+++ b/admin/admin_dashboard.html
@@ -17,7 +17,7 @@
             <h2>Admin Bridge</h2>
         </div>
         <div class="navbar">
-            <a href="dashboard.html" class="active">
+            <a href="admin_dashboard.html" class="active">
                 <span class="material-icons-sharp">dashboard</span>
                 <h3>Dashboard</h3>
             </a>
@@ -74,48 +74,7 @@
                     <p>123 Admin Street, City</p>
                 </div>
             </div>
-        </aside>
-
-        <!-- Main Section -->
-        <main>
-            <div class="dashboard-container">
-                <h2>Dashboard</h2>
-                <div class="card-container">
-                    <!-- Manage Students Card -->
-                    <div class="card">
-                        <span class="material-icons-sharp">person</span>
-                        <h3>Manage Students</h3>
-                        <p>Add, Update, Delete Students</p>
-                        <button onclick="window.location.href='manage_students.html'">Manage</button>
-                    </div>
-
-                    <!-- Manage Faculty Card -->
-                    <div class="card">
-                        <span class="material-icons-sharp">school</span>
-                        <h3>Manage Faculty</h3>
-                        <p>Add, Update, Delete Faculty</p>
-                        <button onclick="window.location.href='manage_faculty.html'">Manage</button>
-                    </div>
-
-                    <!-- View Reports Card -->
-                    <div class="card">
-                        <span class="material-icons-sharp">bar_chart</span>
-                        <h3>View Reports</h3>
-                        <p>Attendance, Marks, and More</p>
-                        <button onclick="window.location.href='view_reports.html'">View</button>
-                    </div>
-
-                    <!-- Assign Faculty to Department Card -->
-                    <div class="card">
-                        <span class="material-icons-sharp">assignment</span>
-                        <h3>Assign Faculty to Departments</h3>
-                        <p>Manage Departmental Assignments</p>
-                        <button onclick="window.location.href='assign_faculty.html'">Assign</button>
-                    </div>
-                </div>
-            </div>
-        </main>
-
+        </aside>        
         <!-- Right Section -->
         <div class="right">
             <div class="announcements">
