new changes from nethra

--- a/faculty/faculty.html
+++ b/faculty/faculty.html
@@ -83,7 +83,7 @@
                 <span class="material-icons-sharp">grid_view</span>
                 <h3>View Students</h3>
             </a>
-            <a href="../students/timetable.html">
+            <a href="timetable.html">
                 <span class="material-icons-sharp">today</span>
                 <h3>Time Table</h3>
             </a>
